Add tenant-scoped HR reports with payroll overtime, slim JSON, and access tests.